	corner case bug.

	* man/cerebro_module.3.in: Tweak based on changes.

	* man/cerebro.conf.5.in: Add note on shortened hostnames for
	forwarding config.

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_speaker.c:
	Support cerebrod_alternate_hostname debug option.

	* man/cerebro.conf.5.in: Document new cerebrod_alternate_hostname
	debug option.
	
2007-10-17  Albert Chu  <chu11@llnl.gov>

        * DISCLAIMER.UC: New file.

        * DISCALIMER: Updated with new disclaimer.

        * Makefile.am, cerebro.spec.in: Add DISCLAIMER.UC.

	* Fixed copyright and FSF address globally.
	
2007-10-16  Albert Chu  <chu11@llnl.gov>

	* Fix typos in Copyright headers globally.

        * config/Make-rpm.mk: Remove localism.

        * Makefile.am: Remove use of Make-rpm.mk.
	
2007-10-15  Albert Chu  <chu11@llnl.gov>

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_listener.c: Continue packet forwarding work.

	* src/libs/wrappers/wrappers.h,
	src/libs/wrappers/wrappers_hostlist.c: Add new hostlist wrappers.

	* man/cerebro.conf.5.in: Update appropriately.

	* src/cerebrod/cerebrod_speaker.c (_speaker_socket_create): Rename
	to _speaker_setup_socket for consistency to other code.
	
2007-10-13  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_listener.c: Continue packet forwarding work.
	
2007-10-12  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.conf.5.in, src/cerebrod/cerebrod_config.h,
	src/cerebrod/cerebrod_config.c, src/cerebrod/cerebrod.c,
	src/cerebrod/Makefile.am,
	src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c: Begin work to add cerebro packet
	forwarding.
	
2007-10-12  Albert Chu  <chu11@llnl.gov>

	* man/cerebro.conf.5.in, src/cerebrod/cerebrod_config.c: Support